fix broken css

--- a/src/apps/appbar.css
+++ b/src/apps/appbar.css
@@ -1,7 +1,7 @@
 .window.AppBar {
-    /*border: 1px solid red;*/
     border-width: 0;
     background-color: transparent;
+    overflow: hidden !important;
 }
 .AppBar .list {
     width: 5rem !important;
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: unset;
 }
 .AppBar .list  li {
     border: 1px solid var(--gray8);
